# alt-text-llm

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.sh
.claude/hooks/: session-setup.sh
.claude/skills/: pr-creation.md
.github/workflows/: publish.yml  template-sync.yaml  test.yml
alt_text_llm/: __init__.py  apply.py  generate.py  label.py  main.py  openrouter.py  scan.py  utils.py
scripts/: version_bump.sh
tests/: __init__.py  conftest.py  test_apply.py  test_e2e.py  test_generate.py  test_helpers.py  test_label.py  test_main.py  test_openrouter.py  test_scan.py  test_stress.py  test_utils.py
