[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alt-text-llm"
dynamic = ["version"]
description = "AI-powered accessibility text generation and labeling tools for markdown content"
readme = "README.md"
authors = [{name = "TurnTrout"}]
license = "MIT"
requires-python = ">=3.11"
keywords = ["alt-text", "accessibility", "markdown", "llm", "ai"]

dependencies = [
    "gitpython",
    "requests",
    "ruamel.yaml",
    "markdown-it-py",
    "rich",
    "prompt_toolkit",
    "beautifulsoup4",
    "argcomplete",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "mypy",
    "types-requests",
]

[tool.pytest.ini_options]
addopts = "--cov=alt_text_llm --cov-report=html -n auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
alt-text-llm = "alt_text_llm.main:main"

[project.urls]
Repository = "https://github.com/alexander-turner/alt-text-llm"

[tool.setuptools]
# Prevent setuptools from trying to auto-package unrelated top-level directories
# like ./plans/.
packages = ["alt_text_llm"]

[tool.setuptools.dynamic]
version = {attr = "alt_text_llm.__version__"}
